chore: remove unnecessary jdk args