@@ -48,9 +48,6 @@
 
     <chmod perm="u+x" file="${projectdir}/mvnw" />
 
-    <property name="jdk-opts"
-      value="--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
-
     <antcall target="cicd-test" />
 
     <property file="${projectdir}/${project}-cicd/port.properties" />
@@ -70,7 +67,6 @@
 
   <target name="cicd-test">
     <exec executable="${mvnw.local}" dir="${projectdir}" failonerror="true">
-      <env key="MAVEN_OPTS" value="${jdk-opts}" />
       <arg line="-f ${project}-cicd -D ant.target=test" />
     </exec>
   </target>
